# perbase

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml  rust.yml
conf/: perbase_standard.conf
examples/: par_granges_example.rs
paper/: README.md  bench.sh  codemeta.json  example_paper.md  fetch_data.sh  paper.bib  paper.md  pixi.toml  plot_benchmarks_comprehensive.py  plot_benchmarks_simple.py
paper/data/outputs/: bench_results_base_depth.csv  bench_results_base_depth_mate_fix.csv  bench_results_base_depth_mate_fix_new_v_old.csv
proptest-regressions/lib/: par_granges.txt
script/: 1p19q.py
src/: main.rs
src/commands/: base_depth.rs  merge_adjacent.rs  mod.rs  only_depth.rs  per_base.rs  risky_depth.rs  simple_depth.rs
src/lib/: mod.rs  par_granges.rs  par_io.rs  position.rs  read_filter.rs  reference.rs  utils.rs
src/lib/position/: mate_fix.rs  mod.rs  pileup_position.rs  range_positions.rs
test/: expected.tsv  notes.md  test.bam
