[package]
name = "perbase"
version = "0.3.9-alpha.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/perbase"
description = "Fast and correct perbase BAM/CRAM analysis."
documentation = "https://docs.rs/perbase"
readme = "README.md"
categories = ["science"]
keywords = ["depth", "coverage", "bioinformatics", "genomic"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "perbase_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "perbase"
path = "src/main.rs"

[dependencies]
rust-htslib = "0.32.0"
log = "0.4.11"
env_logger = "0.7.1"
anyhow = "1.0.32"
csv = "1.1.3"
rayon = "1.4.0"
smartstring = {version = "0.2.4", features = ["serde"]}
serde = {version = "1.0.116", features = ["derive"]}
num_cpus = "1.13.0"
grep-cli = "0.1.5"
termcolor = "1.1.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.4"
bio = "0.32.0"
rust-lapper = "0.5.0"
itertools = "0.9.0"
structopt = "0.3.18"
lazy_static = "1.4.0"
bitvec = "0.19.2"

[dev-dependencies]
rstest = "0.6.4"
tempfile = "3.1.0"
proptest = "0.10.1"

