[package]
name = "perbase"
version = "0.9.1"
authors = ["Seth Stadick <sstadick@gmail.com>", "Schaudge King <yuanshenran@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Schaudge/perbase"
description = "Fast and correct perbase BAM/CRAM analysis."
readme = "README.md"
categories = ["science"]
keywords = ["depth", "coverage", "bioinformatics", "genomic"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "perbase_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "perbase"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
bio = "0.41.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
csv = "1.1.6"
env_logger = "0.9.0"
grep-cli = "0.1.5"
gzp = "0.9.5"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.16"
lru_time_cache = "0.11.11"
num_cpus = "1.13.1"
rayon = "1.5.1"
rust-htslib = { version = "0.38.2", features = ["libdeflate"] }
rust-lapper = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }
structopt = "0.3.26"
termcolor = "1.1.3"

[dev-dependencies]
proptest = "1.0.0"
rstest = "0.11.0"
tempfile = "3.1.0"

