[package]
name = "perbase"
version = "0.10.1"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/perbase"
description = "Fast and correct perbase BAM/CRAM analysis."
documentation = "https://docs.rs/perbase"
readme = "README.md"
categories = ["science"]
keywords = ["depth", "coverage", "bioinformatics", "genomic"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "perbase_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "perbase"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.41"
bio = "0.41"
crossbeam = "0.8"
crossbeam-channel = "0.5"
csv = "1.1.6"
env_logger = "0.9.0"
grep-cli = "0.1.5"
gzp = "0.10"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.11"
lru_time_cache = "0.11.1"
num_cpus = "1.13.0"
rayon = "1.4.0"
#TODO add  features = ["libdeflate"] when https://github.com/rust-bio/rust-htslib/pull/341 is merged
rust-htslib = {version = "0.39"}
rust-lapper = "1.0"
serde = { version = "1.0.116", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }
structopt = "0.3.18"
termcolor = "1.1.0"

[dev-dependencies]
proptest = "1.0.0"
rstest = "0.11.0"
tempfile = "3.1.0"

